[tool.poetry]
name = "standard-modules"
version = "0.1.0"
description = ""
authors = ["asn1chef"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
xlrd = "^2.0.1"
requests = "^2.32.3"
lxml = "^5.3.1"
requests-futures = "^1.0.2"
cffi = "^1.17.1"
pypandoc = "^1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
