[package]
name = "artasn"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
int-enum = "1.1"
indexmap = "2.8"
iso8601 = "0.6"
itertools = "0.14"
lazy_static = "1.5"
num = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
widestring = "1.1"

js-sys = { version = "0.3.77", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[build-dependencies]
parsegen = { path = "../parsegen" }
syn = { version = "2.0", features = ["parsing", "printing", "full"] }

[features]
parsegen-js-serialize = ["parsegen/js-serialize", "dep:js-sys", "dep:wasm-bindgen"]

[lib]
crate-type = ["rlib"]
