[package]
name = "asn1chef"
version = "0.1.0"
edition = "2021"

[dependencies]
int-enum = "1.1"
lazy_static = "1.5"
num = { version = "0.4" }
byteorder = "1.5"
nom_locate = "4.2"
varint-rs = "2.2"
pest = "2.7.14"
pest_derive = { version = "2.7.14", features = ["grammar-extras"] }
regex = "1.11"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
widestring = "1.1"

[build-dependencies]
parsegen = { path = "../parsegen" }

[lib]
crate-type = ["rlib"]
