[package]
name = "asn1chef"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
int-enum = "1.1"
indexmap = "2.8"
iso8601 = "0.6"
lazy_static = "1.5"
num = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
widestring = "1.1"

[build-dependencies]
parsegen = { path = "../parsegen" }

[lib]
crate-type = ["rlib"]
