[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
asn1chef = { path = "../asn1chef"  }
byteorder = "1.5.0"
lazy_static = "1.5.0"
nom_locate = "4.2.0"
object-pool = { version = "0.6.0", features = ["experimental"] }

[[bin]]
name = "asn1chef"
path = "src/main.rs"
