[package]
name = "parsegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
lazy_static = "1.5.0"
pest = "2.7.14"
pest_derive = { version = "2.7.14", features = ["grammar-extras"] }
proc-macro2 = "1"
regex = "1.11.1"
syn = { version = "2.0", features = ["parsing", "printing", "full"] }
quote = "1.0"
