[package]
name = "libweb"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]
code = ["artasn/parsegen-js-serialize"]

[dependencies]
artasn = { path = "../../lib/artasn" }
console_error_panic_hook = { version = "0.1.7", optional = true }
hex = "0.4.3"
js-sys = "0.3.77"
lazy_static = "1.5"
lol_alloc = "0.4"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[lib]
name = "libartasn"
crate-type = ["cdylib", "staticlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
